--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="stylesheet" href="/css/styles.css" />
-  <script src="/js/app.js"></script>
-  <title>{{title}}</title>
+  <title>Help</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body>
-  <h1>{{title}}</h1>
-  <p>Created by {{name}}</p>
+  {{>header}}
+  <p>{{helpText}}</p>
+  {{>footer}}
 </body>
 
 </html>
