Added tab icon and flexbox container

--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="icon" href="/img/weather.png" />
   <link rel="stylesheet" href="/css/styles.css" />
   <title>About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +12,7 @@
 
 <body>
   {{>header}}
-  <img src="/img/predator.jpeg" />
+  <div class="main-content"><img class="portrait" src="/img/predator.jpeg" /></div>
   {{>footer}}
 </body>
 
