--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="icon" href="/img/weather.png" />
   <link rel="stylesheet" href="/css/styles.css" />
   <title>Help</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +12,9 @@
 
 <body>
   {{>header}}
-  <p>{{helpText}}</p>
+  <div class="main-content">
+    <p>{{helpText}}</p>
+  </div>
   {{>footer}}
 </body>
 
