--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -4,6 +4,14 @@ body {
   max-width: 650px;
   margin: 0 auto;
   padding: 0 16px;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex-grow: 1;
 }
 
 footer {
@@ -27,4 +35,8 @@ header a {
 h1 {
   font-size: 64px;
   margin-bottom: 16px;
+}
+
+.portrait {
+  width: 250px;
 }
