--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="icon" href="/img/weather.png" />
   <link rel="stylesheet" href="/css/styles.css" />
   <script src="/js/app.js"></script>
   <title>{{title}}</title>
@@ -12,6 +13,9 @@
 
 <body>
   {{>header}}
+  <div class="main-content">
+    <p>Use this site to get your weather!</p>
+  </div>
   {{>footer}}
 </body>
 
