--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="icon" href="/img/weather.png" />
   <link rel="stylesheet" href="/css/styles.css" />
-  <script src="/js/app.js"></script>
   <title>{{title}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
@@ -14,9 +13,14 @@
 <body>
   {{>header}}
   <div class="main-content">
-    <p>Use this site to get your weather!</p>
+    <form>
+      <input placeholder="e.g. Los Angeles" />
+      <button>Search</button>
+    </form>
   </div>
   {{>footer}}
 </body>
 
 </html>
+
+<script src="/js/app.js"></script>
