Wired form return data into display w/ styles

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -17,6 +17,8 @@
       <input placeholder="e.g. Los Angeles" />
       <button>Search</button>
     </form>
+    <p id="location-name"></p>
+    <p id="forecast-info"></p>
   </div>
   {{>footer}}
 </body>
